--- a/sections/meziva-home-hero.liquid
+++ b/sections/meziva-home-hero.liquid
@@ -1,8 +1,8 @@
 <style>
   @media (min-width: 1024px) {
     #meziva-single-hero-{{ section.id }} {
-      padding-top: {{ section.settings.padding_top_desktop }}px;
-      padding-bottom: {{ section.settings.padding_bottom_desktop }}px;
+      padding-top: {{ section.settings.padding_top_desktop }}px !important;
+      padding-bottom: {{ section.settings.padding_bottom_desktop }}px !important;
     }
   }
 </style>
